rules/ingress-and-egress-blocked/test/mixed-np-cnp/input/cilium_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: egress-only
  namespace: my-ns
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
