rules/ingress-and-egress-blocked/test/mixed-np-cnp/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-only
  namespace: my-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
